test/visibility/submodule-in-file/errors/test-PrivateIncludePublic.good
test-PrivateIncludePublic.chpl:3: error: Cannot access 'SubModule', 'SubModule' is private to 'PrivateIncludePublic'
